VEI-839 | Accessibility issue Contrast and section borders

--- a/app/assets/stylesheets/import-one-stop-shop-intermediary-dashboard.css
+++ b/app/assets/stylesheets/import-one-stop-shop-intermediary-dashboard.css
@@ -90,12 +90,13 @@
     flex-basis: 100%;
     margin-bottom: 2em;
     border: 1px solid #dee0e2;
-    background: #f3f2f1;
+    background: #ffffff;
 }
 
 @media screen and (min-width: 600px) {
     .tile {
         flex-basis: 46.99%;
+        margin-bottom: 2%;
     }
     .tile:nth-child(2n-2) {
         margin-left: 2%;
@@ -116,6 +117,11 @@ html[data-useragent*='MSIE 10.0'] .flex-container .tile {
 
 .tile .tile-body {
     border-bottom: 0px;
+    padding: 0px;
+}
+
+.tile .tile-body h2 {
+    background-color: #f3f3f3;
     padding: 12px;
 }
 
@@ -148,4 +154,8 @@ html[data-useragent*='MSIE 10.0'] .flex-container .tile {
    border-radius: 50%;
    display: inline-block;
    margin-right: 10px;
+}
+
+.govuk-summary-card__content {
+    padding: 15px 12px;
 }
